# saw_rag

./: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
src/pyrag/: .env  cli.py  config.py  llm.py
src/pyrag/stores/: base.py  postgres.py
