[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrag"
version = "0.1.0"
description = "local RAG with directory watched ingestion and swapable vector stores"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "openai>=1.50.0",
]

[project.scripts]
pyrag = "pyrag.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pyrag"]
